# getBrain_FW_Main

getBrain_FW_nRF52840/: platformio.ini
getBrain_FW_nRF52840/include/: App_CollectStreamData.h  App_DrowsinessLevelPrediction.h  GetBrainPlatform_Cfg.h  Service_ManageBLE.h  TestMaterial.h  TestTFLite.h  main.h
getBrain_FW_nRF52840/lib/ADS1299/src/: ADS1299.cpp  ADS1299.h  ADS1299_Cfg.cpp  ADS1299_Cfg.h  ADS1299_Def.h
getBrain_FW_nRF52840/lib/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h  model_data.cc  model_data.h
getBrain_FW_nRF52840/lib/gBFeatureExtractor/: gBFeatureExtractor.h
getBrain_FW_nRF52840/src/: App_CollectStreamData.cpp  App_DrowsinessLevelPrediction.cpp  Service_ManageBLE.cpp  TestMaterial.cpp  TestTFLite.cpp  main.cpp
getBrain_FW_nRF52840_NCS/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
getBrain_FW_nRF52840_NCS/driver_libs/ads1299/: Ads1299.c  Ads1299.h  Ads1299_Cfg.c  Ads1299_Cfg.h  Ads1299_Def.h
getBrain_FW_nRF52840_NCS/driver_libs/circular_buffer/: CircularBuffer.c  CircularBuffer.h  CircularBuffer_Def.h
getBrain_FW_nRF52840_NCS/getBrain_Apps/: App_CollectStream.c  App_CollectStream.h
getBrain_FW_nRF52840_NCS/getBrain_BleService/: getBrain_BleService.c  getBrain_BleService.h
getBrain_FW_nRF52840_NCS/src/: main.c
